# extend

./: .clang-tidy  .containerignore  .gitignore  .gitmodules  .vimlocal  CMakeLists.txt  Containerfile  Doxyfile.in  README.md  build.sh  build_in_container.sh  build_in_host.sh  develop.sh  example.tc  init.sh
libs/: README.md
libs/Lyra/: CMakeLists.txt
libs/flat_hash_map/: flat_hash_map.hpp  unordered_map.hpp
libs/g3log/src/: g3log.cpp
libs/g3log/src/g3log/: g3log.hpp
src/io/: FileSource.cpp  FileSource.h  FileSource.test.cpp  encoding_types.h  log.cpp  log.h  prelude.cpp  prelude.h
src/libs/log/: dtoa.cpp  dtoa.h  ftoa.cpp  log.cpp  log.h  log.test.cpp
src/libs/logger/: logger.cpp  logger.h  logger.test.cpp
src/libs/utils/: GetTypeName.h  eastl_io.h  eastl_new.cpp
src/pretty/: main.cpp
src/samples/hello/: greetings.cpp  greetings.h  greetings.test.cpp  main.cpp  main.h
src/templates/: skeleton.cpp  skeleton.h
src/tests/: main.test.cpp  mocks.h
src/text/: LexerStruct.cpp  LexerStruct.h  ParserStruct.cpp  ParserStruct.h  ParserTraits.h  parser_types.h  reader.cpp  reader.h  reader.test.cpp
src/textcode/: ast.cpp  ast.dcl.types.h  ast.h  ast.nodes.h  ast.test.cpp  lexer.cpp  lexer.h  lexer.parsed_values.h  lexer.test.cpp  parser.cpp  parser.h  parser.test.cpp  token_types.h
src/textdata/: README.md  ast.cpp  ast.field_types.h  ast.h  ast.test.cpp  lexer.cpp  lexer.h  lexer.parsed_values.h  lexer.test.cpp  parser.cpp  parser.h  parser.test.cpp  reader.cpp  reader.h  reader.test.cpp  token_types.h  tokens.h
tools/templates/: skeleton.cpp  skeleton.h
